<resources>
    <string name="app_name">WiStorm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ws_net_timeout">网络连接超时</string>
    <string name="ws_tv_check_update">系统检测到有新版本，点击更新</string>
    <string name="ws_account_hit">请输入账号</string>
    <string name="ws_password_hit">请输入密码</string>
    <string name="ws_login">登录</string>
    <string name="ws_check_pwd">记住密码</string>
    <string name="ws_login_pd_context">登录中，请稍后.</string>
    <string name="ws_login_id_wrong">账号或密码错误，请再次尝试</string>
    <string name="ws_login_null">用户名和密码不能为空，请重试。</string>
    <string name="ws_accout_bind_phone">该账号已绑定其他手机</string>
    <string name="ws_forgot_password">忘记密码</string>
    <string name="ws_register_account">注册账号</string>
  	<string name="set_time">设置时间</string>
  	<string name="set_Date">设置日期</string>
  	<string name="clear_history">清除历史记录</string>
  	<string name="search_nothing">搜索不到相关内容</string>
	<string name="slidingmen_mene_1">侧滑菜单一</string>
	<string name="slidingmen_mene_2">侧滑菜单二</string>
	<string name="slidingmen_mene_3">侧滑菜单三</string>
	<string name="all_city">全部城市</string>
    <string name="hot_city">热门城市</string>
	<string name="gps_city">当前定位城市</string>
	<string name="hit_search">输入城市名或拼音</string>
	<string name="switch_city">切换城市</string>
	<string name="gpsing">正在定位...</string>
	<string name="no_search_city">未定位到城市,请选择</string>
	<string name="select_city_again">重新选择</string>
	<string name="scan_text">将二维码/条形码放入框内，即可自动扫描</string>
	<string name="car_brand_title">汽车品牌</string>
	<string name="car_series_title">选择车型</string>
	<string name="car_type_title">选择车款</string>
	<string name="app_version">V 1.0.0</string>
    <string name="app_checkupdata">检查版本更新</string>
	<string name="about_app">关于</string>
	<string name="app_copyright">Copyright @ 2015-2016 Wistorm</string>
	<string name="about_app_org">http://www.bibibaba.cn</string>
	<string name="sex_title">请选择性别</string>
	<string name="cancel">取消</string>
	<string name="ok">确定</string>
	<string name="finish_all_msg">请填写完整信息</string>
	<string name="pw_two_diff">2次输入的密码不一致</string>
	<string name="pw_err_again">密码错误，请重新输入</string>
	<string name="pw_ud_succ">密码修改成功</string>
	<string name="pw_ud_fail">密码修改失败</string>
	<string name="pickerview_cancel">取消</string>
	<string name="pickerview_submit">确定</string>
	<string name="pickerview_year">年</string>
	<string name="pickerview_month">月</string>
	<string name="pickerview_day">日</string>
	<string name="pickerview_hours">时</string>
	<string name="pickerview_minutes">分</string>
	<string name="pickerview_seconds">秒</string>
</resources>