<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/rl_top_title"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@color/blue_press" >
     
        <ImageView
			android:id="@+id/iv_back"
			android:layout_width="55dp"
			android:layout_height="45dp"
			android:layout_centerVertical="true"
			android:background="@drawable/ws_ico_back" />

	     <TextView
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_centerHorizontal="true"
	         android:layout_centerVertical="true"
	         android:text="@string/about_app"
	         android:textColor="@color/white"
	         android:textSize="16sp" />
	     
 	</RelativeLayout>
 	
    
    <ImageView 
        android:id="@+id/iv_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_launcher" 
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"/>
    
    <RelativeLayout 
        android:id="@+id/rl_v"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
	    <TextView 
	        android:id="@+id/tv_app_version"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="5dp"
	        android:text="@string/app_version"
	        android:textColor="@color/green_light" />
        
    </RelativeLayout>
    
    
    
    <TextView 
        android:id="@+id/tv_app_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/app_copyright"
        android:textColor="@color/gray_alpha" />
    
    
    <RelativeLayout 
        android:id="@+id/rl_updata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_above="@id/tv_app_copyright"
		android:layout_marginBottom="10dp" >
        <TextView 
	        android:id="@+id/tv_app_checkupdata"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textColor="@color/green_light"
	        android:text="@string/app_checkupdata" />
        
        <TextView 
	        android:id="@+id/tv_app_org"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/tv_app_checkupdata"
	        android:gravity="center"
	        android:textColor="@color/green_light"
	        android:text="@string/about_app_org" />
        
    </RelativeLayout>
    
    
  
    

</RelativeLayout>

