<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ws_llyt_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ws_login_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" >

            <ImageView
                android:id="@+id/ws_iv_logo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ws_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ws_round_bg"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <EditText
                android:id="@+id/et_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/ws_account_hit"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#e5e5e5" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/ws_password_hit"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/ws_btn_bg"
            android:text="@string/ws_login"
            android:textColor="#000000"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/notePswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ws_selector_checkbox"
            android:checked="true"
            android:paddingLeft="35dp"
            android:text="@string/ws_check_pwd"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/ws_tv_check_update"
            android:textColor="#FF0000"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:text=""
         />

</LinearLayout>